--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  background-image: url("login.jpg");
+  background-repeat: no-repeat; 
+  background-size: 1500px,1000px;
+  /* background-image: linear-gradient(79deg, #84ffc9 25%,  #f5ccd4 33%, #5cb270 60%); */
+  
 }
 
 .App-logo {
@@ -22,6 +28,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+ 
 }
 
 .App-link {
